ipc/ipdl/test/ipdl/error/oldIncludeSyntax.ipdl
//error: bad syntax near `"Foo.ipdl"'

include protocol "Foo.ipdl";

[ChildProc=any]
protocol oldIncludeSyntax {
child: async __delete__(X x);
};
